welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (i <-0 to taille - 1)
         ^Array2:22: error: not found: value decalge
  var c : Color = T((0+decalge)%taille)
                       ^